2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Parser/NRefactoryParser.cs: Operators are now converted.

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Gui/NewCSharpExpressionFinder.cs, Gui/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 427375 - Code Completion: Incorrect completion of
	  "using"'

2008-09-20  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Removed duplicate get/set in
	  property declaration.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed 'Bug 427734 - Code Completion issues
	  with enums'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: forget one commit.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: fixed 'Bug 427649 - Code Completion: protected
	  methods shown in code completion'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs, Gui/CSharpTextEditorCompletion.cs: fixed 'Bug
	  405000 - Namespace alias qualifier operator (::) does not trigger
	  code completion'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: fixed 'Bug 397930 - Navigation to generic
	  method not working correctly'.

2008-09-19  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs: Found cleaner way
	  for method resolve result.

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Track api changes.
	* gtk-gui/objects.xml, gtk-gui/gui.stetic: Flush.

2008-09-18  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: fixed "Bug 427294 - Code Completion:
	  completion on values returned by methods doesn't work".

2008-09-18  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 427286 - Code
	  Completion: completion done without showing the completion list".
