@@ -1,6 +1,2 @@
 <objects attr-sync="on">
-  <object type="CSharpBinding.CompilerOptionsPanelWidget" palette-category="CSharpBinding" allow-children="false" base-type="Gtk.Bin">
-    <itemgroups />
-    <signals />
-  </object>
 </objects>
