@@ -1,5 +1,10 @@
 2008-09-20  Mike Krüger <mkrueger@novell.com> 
 
+	* Gui/ResolveVisitor.cs, Parser/NRefactoryParser.cs: Added operator
+	  overload handling.
+
+2008-09-20  Mike Krüger <mkrueger@novell.com> 
+
 	* Parser/NRefactoryParser.cs: Operators are now converted.
 
 2008-09-20  Mike Krüger <mkrueger@novell.com> 
